--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <link rel="shortcut icon" href="./assets/img/favicon.png">
-
-    <!-- <link rel="stylesheet" href="./assets/css/styles.css" /> -->
-    <!-- <link rel="stylesheet" href="./assets/css/styles.css" />
-    <link rel="stylesheet" href="./assets/css/timeline.css" /> -->
+    <link rel="stylesheet" href="./assets/css/custom.css" />
 
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dancing+Script|Antic+Slab" />
 
@@ -31,6 +28,11 @@
 
   </head>
   <body>
+      <header id="header" class="inner">
+          <h1><a href="/writing/">Tieu Bao</a></h1>
+          <span class="tagline">My presence on the internet</span>
+      </header>
+
       <!-- BEGIN Timeline Embed -->
       <div id="timeline">
 
@@ -39,9 +41,10 @@
       <script type="text/javascript">
         var timeline_config = {
          width: "100%",
-         height: "100%",
+         height: "80%",
          source: 'data.json',
-         embed_id: 'timeline'
+         embed_id: 'timeline',
+         font:  'NewsCycle-Merriweather',
         }
       </script>
       <script type="text/javascript" src="assets/js/storyjs-embed.js"></script>
