Edit homepage content

--- a/index.html
+++ b/index.html
@@ -3,11 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>Timeline | Tieu Bao</title>
-    <meta name="description" content="Timeline | Tieu Bao">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+    <meta name="author" content="Tieu Bao (@mrcexii)">
+    <meta name="description" content="I prefer to be called Tieu Bao /Chi-awbow/ (or Xiaobao in chinese) which means 'little treasure'﻿ ...">
+    <meta name="keywords" content="tieubao">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <!-- twitter card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@mrcexii">
+    <meta name="twitter:creator" content="@mrcexii">
+    <meta name="twitter:title" content="Timeline | Tieu Bao (@mrcexii)">
+    <meta name="twitter:url" content="http://tieubao.me">
+    <meta name="twitter:description" content="I prefer to be called Tieu Bao /Chi-awbow/ (or Xiaobao in chinese) which means 'little treasure'﻿ ...">
+
+    <meta property="twitter:image:src" content="http://www.gravatar.com/avatar/8ba1b22d44a6ce549405aa85b8cf6752.png?s=200">
+
+
+    <!-- open graph -->
+    <meta property="og:title" content="Timeline | Tieu Bao"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://tieubao.me"/>
+    <meta property="og:site_name" content="Timeline | Tieu Bao" />
+    <meta property="og:description" content="I prefer to be called Tieu Bao /Chi-awbow/ (or Xiaobao in chinese) which means 'little treasure'﻿ ..."/>
+    <meta property="og:image" content="http://www.gravatar.com/avatar/8ba1b22d44a6ce549405aa85b8cf6752.png?s=200">
+
 
     <link rel="shortcut icon" href="./assets/img/favicon.png">
     <link rel="stylesheet" href="./assets/css/custom.css" />
@@ -45,6 +69,7 @@
          source: 'data.json',
          embed_id: 'timeline',
          font:  'NewsCycle-Merriweather',
+         start_zoom_adjust: 4
         }
       </script>
       <script type="text/javascript" src="assets/js/storyjs-embed.js"></script>
