--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </head>
   <body>
       <header id="header" class="inner">
-          <h1><a href="/writing/">tieubao</a></h1>
+          <h1><a href="/writing/">Han Ngo</a></h1>
           <span class="tagline">My presence on the internet</span>
       </header>
 
